--- a/关联式容器/树及相关介绍.md
+++ b/关联式容器/树及相关介绍.md
@@ -2,7 +2,7 @@
 
 ## 一.树的导览
 
-![Screenshot_20220319_135326_com.newskyer.draw](C:\Users\q1369\Documents\Tencent Files\2930848926\FileRecv\MobileFile\Screenshot_20220319_135326_com.newskyer.draw.png)
+![img](https://img-blog.csdnimg.cn/d1c04622646e418b8f42a067c7f2ac38.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAd2FzYW10Yw==,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
 
 ## 二.二叉搜索树
 
@@ -36,7 +36,9 @@ AVL tree就是一种平衡二叉搜索树，它保证平衡（即深度为O(logn
 
 #### 单旋转
 
-如果由于外侧插入而导致不平衡，那么情况就只有一种，所以其实很好讨论![Screenshot_20220319_142622_com.newskyer.draw](C:\Users\q1369\Documents\Tencent Files\2930848926\FileRecv\MobileFile\Screenshot_20220319_142622_com.newskyer.draw.png)
+如果由于外侧插入而导致不平衡，那么情况就只有一种，所以其实很好讨论
+
+![å¨è¿éæå¥å¾çæè¿°](https://img-blog.csdnimg.cn/d308888455dd4287aceb5466dca44f20.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAd2FzYW10Yw==,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
 
 使其再次平衡的方法也很简单，就是想办法让A提高一层，C降低一层，把K1提起来，让K2自然滑下去，并把B子树成为K2的左子树（这种主要是因为二叉搜索树的特性，即B的键值在K1K2之间），这些操作到时候只需要改指针即可（情况固定，方法固定，比较简单）。
 
@@ -44,7 +46,7 @@ AVL tree就是一种平衡二叉搜索树，它保证平衡（即深度为O(logn
 
 在内侧插入造成不平衡的情况下，双旋转就是利用两次单旋转完成平衡
 
-![Screenshot_20220319_150437_com.newskyer.draw](C:\Users\q1369\Documents\Tencent Files\2930848926\FileRecv\MobileFile\Screenshot_20220319_150437_com.newskyer.draw.png)
+![å¨è¿éæå¥å¾çæè¿°](https://img-blog.csdnimg.cn/f1d7c31c1de9439bb749593b2d9b8bda.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAd2FzYW10Yw==,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center)
 
 #### 单旋转双旋转的补充
 
