基本算法,set相关算法

--- a/算法/算法概述及基本算法.md
+++ b/算法/算法概述及基本算法.md
@@ -82,3 +82,102 @@ T accumulate（InputIterator frist，InputIterIator last，T init，[BinaryOpera
 
 基本运算单元为*first++ = value++
 
+## 四.基本算法
+
+STL中并没有区分什么基本算法或复杂算法，但有一些算法定义在<stl_algobase.h>中，而其他算法定义在<stl_algo.h>中，因此我们把前者的算法叫做基本算法。
+
+### 1.部分基本算法
+
+#### equal（判断两个区间相等与否）
+
+equal的实现就是依次比较两个区间的元素，注意，equal基于一个假设：即第二个区间的长度不小于第一个区间，如果小于了，经过测试，返回false，如果第一个区间小于第二个区间但是前面的相同的话还是返回true，所以要判断两个区间是否完全相同还要自行额外判断区间长度是否相同。
+
+equal也可以接受一个仿函数（函数指针）作为参数。
+
+#### fill（改填元素值）
+
+这个没什么好说的，就是给区间内每个元素赋一个传进来的值。
+
+#### fill_n（改填元素值，n次）
+
+将[first，last)的前n个元素改填新值，注意n不能超过区间大小。
+
+#### iter_swap（元素互换）
+
+互换两个迭代器所指元素。
+
+#### lexicographical_compare（以字典顺序进行比较）
+
+以字典顺序比较两个区间，若第一个区间小于第二个区间则返回true（包括第一个区间等于第二个区间前面部分但长度更小），其他情况返回false。也可以自行传递函数，还有针对const unsigned char*和const char *的特化版本。
+
+#### max（最大值）
+
+取两个对象中的大值，可自行传递函数。
+
+#### min（最小值）
+
+取两个对象中的小值，可自行传递函数。
+
+#### mismatch（找出不匹配点）
+
+比较两个序列，返回一个pair，first是第一个序列不匹配点，second是第二个序列不匹配点，第一个序列长度默认应该不大于第二个序列（经过测试，好像大于了也没什么事）。可以自行传递函数。
+
+#### swap（交换）
+
+交换两个对象的内容。
+
+### 2.copy（复制）
+
+copy算法是客端程序和STL内部都常用的算法，因为copy的经常使用，所以STL用了很多方法来提高copy算法的效率，包括函数重载，型别特性（type traits），偏特化等。
+
+![è¯·æ·»å å¾çæè¿°](https://img-blog.csdnimg.cn/c8abe6a04563448f9f0a1848b11f366a.png?x-oss-process=image/watermark,type_ZHJvaWRzYW5zZmFsbGJhY2s,shadow_50,text_Q1NETiBA6Iqx6IqxLi4u,size_20,color_FFFFFF,t_70,g_se,x_16)
+
+copy算法可将输入区间[first, last)内的元素复制到[result, result + (last - first))内。
+
+如果输入区间与输出区间没有重叠，copy算法是没有问题，但是如果有重叠，特别是输出区间开头在输入区间内copy算法可能有问题，之所以是可能有问题，是因为copy算法有可能根据迭代器特性调用memmove，这个函数是直接复制原区间内容再粘贴到输出区间。
+
+copy算法的结构：copy算法只有一个接口，这个接口对应的是一个最泛化的版本和两个特化版本（那两种char），如果是那两种特化版本，函数是直接调用memmove()，这个最泛化版本调用_ copy_dispatch()接口，_ copy_ dispatch接口也对应一个泛化版本和两个特化版本(T*和const T *），如果是泛化版本，调用_ _ copy()接口，同时提取迭代器特性，这个接口对应InputIterator版本和RandomAccessIterator版本，前一个以迭代器等同于否来进行复制行为，后一个调用copy_d接口，这个接口对应的函数以n决定循环的次数，速度更快；如果是特化版本，判断指针所指之物是否有trivial assignment operator（平凡赋值操作符），如果为true那么用memmove()，如果为false则用_copy_d()（注意这里的true和false不是bool型）。
+
+关于trivial assignment operator：所谓~~~，从trivial的意思也可以看出来，是琐碎的，无意义的赋值，即可以直接通过内存赋值，不需要调用构造函数什么的，例如int，char什么的，而non-trivial assignment operator是指有意义的赋值，要用=符号一个个赋值，trivial assignment operator都是规定好了的，在<type_traits.h>中，我们直接创建的class都死non-trivial assignment operator，如果要使其为trivial assignment operator，那么就要改上面那个文件了。
+
+### 3.copy_backward（逆向复制）
+
+逆向复制的逆向体现在两点，一是从last1-1开始复制，二是先复制到result，再复制到result-1，具体的实现和copy差不多，可能就实际的代码方向改了点，当result在[first，last)里面有可能有问题。
+
+## 五.set相关算法
+
+set一共提供了四种与set(集合)相关的算法，分别是并集(union)，交集(intersection)，差集(difference)，对称差集(symmetric difference)。
+
+SLT中的set和multiset(允许重复元素的set)都是有排序的，所以这四个算法接收的是有序区间，hash_set和hash_multiset无序，所以不能用这四个算法。
+
+四个算法至少有四个参数，分别表现两个set区间，第一版本以a<b判断相等，第二版本以自行传递函数指定a<b的意义。（这里只提供第一版本）
+
+### 1.set_union（并集）
+
+算法取S1和S2的并集，S1，S2为为有序序列，S1和S2中的元素不需唯一，假设某个值在S1中出现n次，在S2中出现m次，根据代码逻辑，最终并集中元素个数为max(m, n)，其中n个来着S1，剩下的来自S2。
+
+具体操作的逻辑见书，还是比较简单。
+
+### 2.set_intersection（交集）
+
+算法取S1和S2的交集，假设某个值在S1中出现n次，在S2中出现m次，根据代码逻辑，最终交集中元素个数为min(m, n)，全部来自S1。
+
+具体的操作逻辑见书，要记住S1和S2都是有序序列，有时候有序是一个很神奇，很有效率的东西。
+
+### 3.set_difference（差集）
+
+算法取S1和S2的差集，即S1-S2，假设某个值在S1中出现n次，在S2中出现m次，根据代码逻辑，最终差集中元素个数为max((n-m)，0)，
+
+具体的操作逻辑见书。
+
+### 4.set_symmetric_difference（对称差集）
+
+算法取S1和S2的对称差集，对称差集，是对应数学中集合的对称差。集合A与集合B的对称差集定义为集合A与集合B中所有不属于A∩B的元素的集合，记为A△B,也就是说A△B={x|x∈A∪B,x∉A∩B}，即A△B=(A∪B) - (A∩B)。
+
+假设某个值在S1中出现n次，在S2中出现m次，根据代码逻辑，最终对称差集中元素个数为|n - m|。
+
+具体的操作逻辑见书。
+
+## 六.heap算法
+
+共有四个heap算法，make_heap（制造一个heap），pop_heap（从heap中取出一个元素），push_heap（将一个元素推进heap内），sort_heap（给heap排序），具体实现见以前heap的内容。
